2001-02-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (info_one): typo.
	* server-src/planner.c (setup_estimate): Don't re-ask for level 0
	if last_level is 0 and FORCE_NO_BUMP is set.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/stream.h: Move DATABUF_SIZE to stream.h.
	* client-src/sendbackup.c: Do not ask for a big receive buffer.
	* server-src/dumper.c: Ask for a bigger send buffer.  Minor typos.
	* server-src/taper.c: Ask for a bigger receive buffer.
	* recover-src/amrecover.c: Use stream_client instead of specific
	  (and incorrect) bind() code.
	* recover-src/extract_list.c: Ditto.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Add lots more error logging to help track down
	  problems.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/stream.c: Add lots more error logging to help track down
	  problems.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Rewind after loading a slot either by slot
	  or by label.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* configure.in: Copy ssize_t type check code from main branch.
	* client-src/.cvsignore: Remove bogus entry.

2001-02-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/SYSTEM.NOTES: change cs.umd.edu by amanda.org.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amindexd.c (uncompress_file): remove uncompressed
	index file if the command failed.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-changer-driver.c (GenericRewind): init ret to 0
	to remove compiler warning.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (setup_estimate): ask for level 0 for
	a new disk if force-bump is set,
	log force-bump and force-nobump command.

2001-02-21 Thomas Hepper <thqant.han.de>
	* changer-src/scsi-changer-driver.c: Do an Test Unit Ready
	  before sending SCSI commands in GenericRewind